Update files and dependencies

--- a/retrival/langchain.ipynb
+++ b/retrival/langchain.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "'[General Gameplay]\\n- Remind the player to type their actions clearly and concisely to ensure smooth gameplay.\\n- Provide occasional hints, tips, or prompts to guide the player\\'s decision-making process.\\n- Encourage creativity and exploration while maintaining a sense of challenge and adventure.\\n\\n[Exploration]\\n- The player finds themselves in a dense, enchanted forest teeming with mystical creatures and hidden treasures.\\n- Encourage the player to explore the forest by describing the surroundings, potential encounters, and points of interest.\\n- Use vivid imagery and descriptive language to immerse the player in the forest environment.\\n- Provide hints or clues about nearby landmarks, valuable items, or potential dangers.\\n\\n[Actions]\\n- Exploration: The player can move deeper into the forest to discover new areas and encounters.\\n- Combat: Engaging in combat with nearby monsters is an option.\\n- Rest: The player can take a break to regain health and stamina.\\n- Treasure Hunting: They can search for chests containing valuable loot.\\n\\n[Monster Encounter/Combat Mechanics]\\n- When the player encounters a monster, describe its appearance, behavior, and any distinguishing features.\\n- Instruct the player to type \"Attack\" followed by the monster\\'s name to engage in combat.\\n- Alternatively, the player can type \"Pet\" followed by the monster\\'s name to attempt to befriend the monster.\\n- If the player chooses to attack, resolve the combat encounter based on the player\\'s actions and the monster\\'s behavior.\\n- If the player chooses to pet the monster, describe the player\\'s approach and the monster\\'s reaction.\\n- The monster may respond with either aggression or friendliness, depending on its nature and the player\\'s actions.\\n- Provide feedback on the outcome of the interaction, including any consequences for the player\\'s choice.\\n\\n\\n[Resting]\\n- Explain the importance of resting to regain health and stamina after strenuous activities or combat encounters.\\n- Guide the player to find a safe spot in the forest and type \"Rest\" to initiate the resting process.\\n- Describe the peaceful ambiance of the resting area and the soothing effects of the restorative rest.\\n\\n[Treasures]\\n- Inform the player about the presence of hidden treasures scattered throughout the forest.\\n- Encourage the player to search for chests containing valuable loot by typing \"Open Chest.\"\\n- Warn the player about potential traps guarding the chests and provide instructions on how to disarm them.\\n- Describe the excitement and satisfaction of uncovering rare and valuable treasures.\\n\\n'"
+       "'[General Gameplay/Start Game]\\n- Provide occasional hints, tips, or prompts to guide the player\\'s decision-making process.\\n- Encourage creativity and exploration while maintaining a sense of challenge and adventure.\\n\\n[Exploration]\\n- The player finds themselves in a dense, enchanted forest teeming with mystical creatures and hidden treasures.\\n- Encourage the player to explore the forest by describing the surroundings, potential encounters, and points of interest.\\n- Use vivid imagery and descriptive language to immerse the player in the forest environment.\\n- Provide hints or clues about nearby landmarks, valuable items, or potential dangers.\\n\\n[What to do]\\n- Exploration: The player can move deeper into the forest to discover new areas and encounters.\\n- Combat: Engaging in combat with nearby monsters is an option.\\n- Rest: The player can take a break to regain health and stamina.\\n- Treasure Hunting: They can search for chests containing valuable loot.\\n\\n[Monster Encounter/Combat Mechanics/Fighting With Monster]\\n- When the player encounters a monster, describe its appearance, behavior, and any distinguishing features.\\n- Instruct the player to type \"Attack\" followed by the monster\\'s name to engage in combat.\\n- Alternatively, the player can type \"Pet\" followed by the monster\\'s name to attempt to befriend the monster.\\n- If the player chooses to attack, resolve the combat encounter based on the player\\'s actions and the monster\\'s behavior.\\n- If the player chooses to pet the monster, describe the player\\'s approach and the monster\\'s reaction.\\n- The monster may respond with either aggression or friendliness, depending on its nature and the player\\'s actions.\\n- Provide feedback on the outcome of the interaction, including any consequences for the player\\'s choice.\\n\\n[Resting]\\n- Explain the importance of resting to regain health and stamina after strenuous activities or combat encounters.\\n- Guide the player to find a safe spot in the forest and type \"Rest\" to initiate the resting process.\\n- Describe the peaceful ambiance of the resting area and the soothing effects of the restorative rest.\\n\\n[Treasures]\\n- Inform the player about the presence of hidden treasures scattered throughout the forest.\\n- Encourage the player to search for chests containing valuable loot by typing \"Open Chest.\"\\n- Warn the player about potential traps guarding the chests and provide instructions on how to disarm them.\\n- Describe the excitement and satisfaction of uncovering rare and valuable treasures.\\n\\n'"
       ]
      },
      "execution_count": 3,
@@ -85,11 +85,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Created a chunk of size 294, which is longer than the specified 10\n",
+      "Created a chunk of size 214, which is longer than the specified 10\n",
       "Created a chunk of size 430, which is longer than the specified 10\n",
-      "Created a chunk of size 308, which is longer than the specified 10\n",
-      "Created a chunk of size 792, which is longer than the specified 10\n",
-      "Created a chunk of size 329, which is longer than the specified 10\n"
+      "Created a chunk of size 311, which is longer than the specified 10\n",
+      "Created a chunk of size 814, which is longer than the specified 10\n",
+      "Created a chunk of size 328, which is longer than the specified 10\n"
      ]
     }
    ],
@@ -108,8 +108,7 @@
      "output_type": "stream",
      "text": [
       "6\n",
-      "[General Gameplay]\n",
-      "- Remind the player to type their actions clearly and concisely to ensure smooth gameplay.\n",
+      "[General Gameplay/Start Game]\n",
       "- Provide occasional hints, tips, or prompts to guide the player's decision-making process.\n",
       "- Encourage creativity and exploration while maintaining a sense of challenge and adventure.\n",
       "----------------------------------------------------------------------------------------------------\n",
@@ -121,14 +120,14 @@
       "- Provide hints or clues about nearby landmarks, valuable items, or potential dangers.\n",
       "----------------------------------------------------------------------------------------------------\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "[Actions]\n",
+      "[What to do]\n",
       "- Exploration: The player can move deeper into the forest to discover new areas and encounters.\n",
       "- Combat: Engaging in combat with nearby monsters is an option.\n",
       "- Rest: The player can take a break to regain health and stamina.\n",
       "- Treasure Hunting: They can search for chests containing valuable loot.\n",
       "----------------------------------------------------------------------------------------------------\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "[Monster Encounter/Combat Mechanics]\n",
+      "[Monster Encounter/Combat Mechanics/Fighting With Monster]\n",
       "- When the player encounters a monster, describe its appearance, behavior, and any distinguishing features.\n",
       "- Instruct the player to type \"Attack\" followed by the monster's name to engage in combat.\n",
       "- Alternatively, the player can type \"Pet\" followed by the monster's name to attempt to befriend the monster.\n",
@@ -212,36 +211,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edf6ead9b6cd4e58b480e39c462cabe8",
+       "model_id": "5b634392c5484fa5a5f2c16b9b79535e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Some parameters are on the meta device device because they were offloaded to the cpu.\n"
-     ]
     }
    ],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "import torch\n",
     "\n",
-    "model_name = \"google/gemma-7b-it\"\n",
+    "model_name = \"google/gemma-2b-it\"\n",
     "dtype = torch.bfloat16\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name,token = api_token)\n",
@@ -250,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,65 +255,82 @@
     " model=model, \n",
     " tokenizer=tokenizer,\n",
     " return_tensors='pt',\n",
-    " max_new_tokens=100,\n",
+    " max_new_tokens=200,\n",
     " model_kwargs={\"torch_dtype\": torch.bfloat16}\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "llm = HuggingFacePipeline(\n",
     " pipeline=pipe,\n",
-    " model_kwargs={\"temperature\": 0.7},\n",
+    " model_kwargs={\"temperature\": 0.5},\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "qa = RetrievalQA.from_chain_type(\n",
     " llm=llm,\n",
     " chain_type=\"stuff\",\n",
-    " retriever=vectordb.as_retriever(search_kwargs={\"k\":3}),\n",
+    " retriever=vectordb.as_retriever(search_kwargs={\"k\":4}),\n",
     "\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_prompt = '''GAME DIALOGUE:\n",
+    "model:\n",
+    "The beast lunges at you, its claws outstretched. You narrowly avoid its attack and find yourself in a standoff, your strength against its fury. You know that you must find a way to defeat this beast, but you are running out of time. What will you do next?<end_of_turn>\n",
+    "\n",
+    "based on the dialogue above, give relevant instructions to model to continue the story.'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\adito\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\transformers\\models\\gemma\\modeling_gemma.py:555: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at ..\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:263.)\n",
-      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'query': 'You are in enchanted woods. What can happen?',\n",
-       " 'result': ' You are in enchanted woods. You can explore the forest, defeat monsters, and uncover hidden treasures.'}"
+       "{'query': 'GAME DIALOGUE:\\nmodel:\\nThe beast lunges at you, its claws outstretched. You narrowly avoid its attack and find yourself in a standoff, your strength against its fury. You know that you must find a way to defeat this beast, but you are running out of time. What will you do next?<end_of_turn>\\n\\nbased on the dialogue above, give relevant instructions to model to continue the story.',\n",
+       " 'result': \"\\nThe player must quickly find a way to defend themselves against the beast's attack. They can use any available weapon or tactic to defeat the beast.\"}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qa.invoke(\"You are in enchanted woods. What can happen?\")"
+    "qa.invoke(start_prompt)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -340,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
